fixed about me formating and added styling for scrollbars in chrome and firefox

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin: auto; 
-  max-width: 90%; 
-  width: 650px; 
+  max-width: 600px; 
   padding: 1.5rem; 
   box-sizing: border-box;
 }
@@ -36,5 +35,5 @@ p {
 }
 
 strong {
-  color: #81c784; /* Highlight your IT and Gov experience in a forest green */
+  color: #81c784; /* Highlight important keywords */
 }
